[package]
name = "joycontrol-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
hashbrown = "0.13"
btleplug = { version = "0.10", features = ["serde"] }
uuid = "1.3.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
rsevents = "0.3"
lazy_static = "1.4"
crc8-rs = "1.1"
